<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

<!--    <EditText-->
<!--        android:id="@+id/UsernameRegister"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Username"-->
<!--        android:inputType="text"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/imageView2"-->
<!--        app:layout_constraintStart_toStartOf="@+id/imageView2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView2" />-->

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/RegisterButton111"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:background="@drawable/redbuttongradient"-->
<!--        android:text="Register"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/PasswordRegister"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:ems="10"-->
<!--        android:hint="password"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@mipmap/logo_foreground" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextTextEmailAddress"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="44dp"-->
<!--        android:ems="10"-->
<!--        android:hint="email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/UsernameRegister"-->
<!--        app:layout_constraintStart_toStartOf="@+id/UsernameRegister"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/UsernameRegister" />-->


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/redbuttongradient"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextText1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText1" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/Date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/d_o_b"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress1" />

    <ImageButton
        android:id="@+id/DOB"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Date1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress1"
        app:srcCompat="@drawable/calendar_days_solid" />
</androidx.constraintlayout.widget.ConstraintLayout>